# rocket_prometheus_logger

./: Cargo.toml  README.md  azure-pipelines.yml
src/: lib.rs
src/prometheus_fairing/: mod.rs
tests/: test.rs
